--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PQ'
 - !lcsh 'Spanish drama -- Translations into Finnish'
+- GITenberg
 title: 'Kuinka anopista päästään: Komedia yhdessä näytöksessä'
 url: http://www.gutenberg.org/ebooks/27227
